# wg-best-practices-os-developers

./: .gitignore  .markdownlint.yml  CHARTER.md  CONTRIBUTING.md  README.md  README.md Trgull  README.mdt Js. Tangull  SECURITY.md  code-of-conduct.md  meeting-minutes.md  members.md  package-lock.json  package.json
docs/Compiler-Hardening-Guides/example-cmake/: CMakeLists.txt  Dockerfile  Makefile  README.md
docs/Secure-Coding-Guide-for-Python/: .gitignore  CONTRIBUTING.md  KNOWN_ISSUES.md  generate_test_summary.sh  index.md  pyproject.toml  readme.md  tox.ini
docs/Secure-Coding-Guide-for-Python/01_introduction/pyscg-0040/: README.md
docs/Secure-Coding-Guide-for-Python/01_introduction/pyscg-0041/: README.md  compliant01.py
docs/Secure-Coding-Guide-for-Python/01_introduction/pyscg-0042/: README.md  example02.py  noncompliant01.py
docs/Secure-Coding-Guide-for-Python/01_introduction/pyscg-0055/: README.md  example01.py
docs/Secure-Coding-Guide-for-Python/02_encoding_and_strings/pyscg-0043/: README.md  compliant02.py  example02.py  example03.py  noncompliant01.py  noncompliant02.py
docs/Secure-Coding-Guide-for-Python/02_encoding_and_strings/pyscg-0044/: README.md  example01.py  noncompliant01.py
docs/Secure-Coding-Guide-for-Python/02_encoding_and_strings/pyscg-0045/: README.md  compliant02.py  example01.py
docs/Secure-Coding-Guide-for-Python/02_encoding_and_strings/pyscg-0046/: README.md  noncompliant01.py
docs/Secure-Coding-Guide-for-Python/03_numbers/pyscg-0001/: README.md  compliant01.py
docs/Secure-Coding-Guide-for-Python/03_numbers/pyscg-0002/: README.md
docs/Secure-Coding-Guide-for-Python/03_numbers/pyscg-0003/: README.md  example01.py  example02.py  example03.py
docs/Secure-Coding-Guide-for-Python/03_numbers/pyscg-0004/: README.md  example01.py  example02.py  noncompliant02.py
docs/Secure-Coding-Guide-for-Python/03_numbers/pyscg-0005/: README.md  example01.py  example02.py
docs/Secure-Coding-Guide-for-Python/03_numbers/pyscg-0006/: README.md  noncompliant01.py
docs/Secure-Coding-Guide-for-Python/03_numbers/pyscg-0007/: README.md  noncompliant01.py
docs/Secure-Coding-Guide-for-Python/03_numbers/pyscg-0053/: README.md  example02.py
docs/Secure-Coding-Guide-for-Python/04_neutralization/pyscg-0008/: README.md
docs/Secure-Coding-Guide-for-Python/04_neutralization/pyscg-0009/: README.md  compliant01.py  compliant02.py  noncompliant01.py  noncompliant02.py
docs/Secure-Coding-Guide-for-Python/04_neutralization/pyscg-0010/: README.md  compliant01.py
docs/Secure-Coding-Guide-for-Python/04_neutralization/pyscg-0011/: README.md  noncompliant01.py
docs/Secure-Coding-Guide-for-Python/04_neutralization/pyscg-0012/: README.md  noncompliant02.py
docs/Secure-Coding-Guide-for-Python/04_neutralization/pyscg-0013/: README.md  compliant01.bash  example01.py
docs/Secure-Coding-Guide-for-Python/04_neutralization/pyscg-0023/: README.md  example01.py  example02.py  noncompliant01.py
docs/Secure-Coding-Guide-for-Python/07_concurrency/: compliant01.py  noncompliant01.py  noncompliant03.py  readme.md
docs/Secure-Coding-Guide-for-Python/CWE-664/CWE-134/: README.md  (+2 more)
docs/Secure-Coding-Guide-for-Python/Intro_to_multiprocessing_and_multithreading/: compliant01.py  compliant02.py  example01.py  noncompliant01.py  noncompliant02.py  noncompliant03.py  readme.md
docs/Secure-Coding-Guide-for-Python/LICENSE/: MIT.txt
docs/Secure-Coding-Guide-for-Python/contributing/: CONTRIBUTING.md
docs/Secure-Coding-Guide-for-Python/contribution/: README.md  README_TEMPLATE.md
docs/Secure-Coding-Guide-for-Python/templates/: README_TEMPLATE.md  compliant01.py  example01.py  noncompliant01.py
docs/Secure-Coding-Guide-for-Python/tests/: README.md  __init__.py  conftest.py  generate_issue_report.py  test_expected_failures.py  test_link_validation.py  test_markdown_validation.py  test_python_validation.py
(+616 files in other folders)
